@@ -1,8 +1,6 @@
 = TODO
 
 == Short term tasks
-* Support POST in webservice to submit information.
-* PUID submission.
 * Improve API documentation.
 
 == Longer term tasks
